--- a/Pages/TargetsPage.xaml
+++ b/Pages/TargetsPage.xaml
@@ -76,7 +76,7 @@
                                     <TextBlock Text="Type: " 
                                                FontSize="12" 
                                                Opacity="0.7"/>
-                                    <TextBlock Text="{Binding IsStaticResponse, Converter={StaticResource BoolToStringConverter}, ConverterParameter='Static|Dynamic'}" 
+                                    <TextBlock Text="{Binding ModificationType, Converter={StaticResource StringToPascalCaseConverter}}" 
                                                FontSize="12" 
                                                Opacity="0.7" 
                                                Margin="4,0,0,0"/>
