--- a/Pages/TargetsPage.xaml
+++ b/Pages/TargetsPage.xaml
@@ -69,98 +69,7 @@
                   SelectionMode="None" 
                   Background="Transparent"
                   Margin="0,0,0,20">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Setter Property="Padding" Value="0,4"/>
-                </Style>
-            </ListView.ItemContainerStyle>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Margin="0,4">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        
-                        <!-- Target URL -->
-                        <Border Grid.Column="0" 
-                                CornerRadius="4" 
-                                Padding="12,8"
-                                Style="{Binding IsEnabled, Converter={StaticResource BoolToStyleConverter}, ConverterParameter='EnabledItemStyle|DisabledItemStyle'}">
-                            <StackPanel>
-                                <TextBlock Text="{Binding TargetUrl}" 
-                                       VerticalAlignment="Center" 
-                                       TextWrapping="Wrap"/>
-                                <StackPanel Orientation="Horizontal" 
-                                            Margin="0,4,0,0"
-                                            Visibility="{Binding Id, Converter={StaticResource NumberToBooleanConverter}, ConverterParameter=0, FallbackValue=Visible}">
-                                    <TextBlock Text="Type: " 
-                                               FontSize="12" 
-                                               Opacity="0.7"/>
-                                    <TextBlock Text="{Binding ModificationType, Converter={StaticResource StringToPascalCaseConverter}}" 
-                                               FontSize="12" 
-                                               Opacity="0.7" 
-                                               Margin="4,0,0,0"/>
-                                    
-                                    <TextBlock Text=" | Match Status: " 
-                                               FontSize="12" 
-                                               Opacity="0.7" 
-                                               Margin="8,0,0,0"/>
-                                    <TextBlock Text="{Binding HttpStatus, TargetNullValue='Any'}" 
-                                               FontSize="12" 
-                                               Opacity="0.7" 
-                                               Margin="4,0,0,0"/>
-                                    
-                                    <TextBlock Text=" | Response Status: " 
-                                               FontSize="12" 
-                                               Opacity="0.7" 
-                                               Margin="8,0,0,0"/>
-                                    <TextBlock Text="{Binding TargetHttpStatus, TargetNullValue='No Change'}" 
-                                               FontSize="12" 
-                                               Opacity="0.7" 
-                                               Margin="4,0,0,0"/>
-                                </StackPanel>
-                            </StackPanel>
-                        </Border>
-                                                
-                        <!-- Toggle Enable/Disable Switch -->
-                        <ToggleSwitch Grid.Column="1" 
-                                      MinWidth="0"
-                                      Width="60"
-                                      Margin="8,0,0,0"
-                                      IsOn="{Binding IsEnabled, Mode=TwoWay}"
-                                      OffContent=""
-                                      OnContent=""
-                                      ToolTipService.ToolTip="Enable/Disable Target"
-                                      Tag="{Binding}"
-                                      Toggled="EnableSwitch_Toggled"
-                                      Visibility="{Binding Id, Converter={StaticResource NumberToBooleanConverter}, ConverterParameter=0, FallbackValue=Visible}"/>
-                        
-                        <!-- Edit Button -->
-                        <Button Grid.Column="2" 
-                                Margin="-8,0,0,0" 
-                                ToolTipService.ToolTip="Edit" 
-                                Tag="{Binding}"
-                                Click="EditTargetButton_Click"
-                                Visibility="{Binding Id, Converter={StaticResource NumberToBooleanConverter}, ConverterParameter=0, FallbackValue=Visible}">
-                            <FontIcon Glyph="&#xE70F;" FontSize="16"/>
-                        </Button>
-
-                        <!-- Delete Button -->
-                        <Button Grid.Column="3" 
-                                Margin="8,0,0,0" 
-                                ToolTipService.ToolTip="Delete" 
-                                Tag="{Binding}"
-                                Click="DeleteTargetButton_Click"
-                                Visibility="{Binding Id, Converter={StaticResource NumberToBooleanConverter}, ConverterParameter=0, FallbackValue=Visible}">
-                            <FontIcon Glyph="&#xE74D;" FontSize="16"/>
-                        </Button>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
+            <!-- This will be populated manually in code -->
         </ListView>
 
         <!-- Add Target Dialog -->
